Fix ios status bar overlap

--- a/src/app/fyle/capture-receipt/receipt-preview/receipt-preview.component.scss
+++ b/src/app/fyle/capture-receipt/receipt-preview/receipt-preview.component.scss
@@ -3,7 +3,8 @@
 .receipt-preview {
   &__toolbar {
     border-bottom: 1px solid $grey-lighter;
-    padding: 16px 0;
+    margin-top: 16px;
+    padding-bottom: 16px;
     line-height: 1.3;
 
     &--no-index {
